 - See if it is possible to ignore xtype error when type does not exists
 - Add option to use window as designer container, handy for form design
 - Update documentation
==> Problems after creating GUID 2.1 
 - Make it possible to load more then one component tree and make this version depended
 - Simplify the code used for Ext.ux.grid.PropertyGrid.
 
 Change History:
 Version 2.1.0:
  + Added a new json parser therefor begin and end tags are no longer needed in code
  + Visual resize added activated by context menu
  + Visual move of element in absolute layout activated by context menu
  + All xtypes which are loaded before guidesigner is load are now selectable
  + Found a good solotion for property grid error
  + Split single javascript files containing multiple classes into files
  + Added "scope.!<VAR>" in json object, so you can create local objects if they don't exist
  + Toolbox is forced to do a layout before showing.
  + Changed version of base ExtJs to 2.2 instead of 2.0, so it also works correlty on firefox 3.0
  * Fixed redrawElement problem causing a blank screen to be shown
 
 Version 2.0.6:
  + Added PHPFile control thanks to Epsylon
  + index.php is added again to release, wraps index.html
  * Fixed problem with null values in json causing error message (layout wizards)
  * Fixed undo problem, changes made with grid could not be undone
  * Cleaned duplicated values from the propertyselection list
  * Drag element, pressing shift changes to clone mode
  * JsonInit is removed from redraw to increase performance
  * Made code override for Ext.FormPanel so it does not crash on a empty item list
  - Moved ExtJs to seperate folder, so you can choose your version of extjs
  - Cleaned old code from subversion
  + Workarround for error in property grid throwing error variable k

 Version 2.0.5:
  * Fixed problem in CodePress and Designer with path
  * Fixed load indicator in JsonPanel
  * Delete of item with single element failed